[package]
name = "source2engine"
version = "0.1.0"
edition = "2021"

[dependencies]
find_folder = "0.3.0"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.85.0"
pistoncore-glutin_window = "0.72.0"
# piston = "0.53.0"
# piston2d-graphics = "0.49.0"
# piston2d-opengl_graphics = "0.81.0"
# pistoncore-glutin_window = "0.71.0"
# find_folder = "0.3.0"